manifests/templates/aks-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ep-mern-authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ep-mern-authservice
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: ep-mern-authservice
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: ep-mern-authservice
        image: azurecontainerlorde.azurecr.io/ep-mern-authservice:${BUILD_TAG}
        ports:
        - containerPort: 3001
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: ep-mern-authservice
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3001
  selector:
    app: ep-mern-authservice
